# hierarchical-document-management-system

./: .gitignore  CMakeLists.txt  PROJECT_STATE.md  README.md  demo_script.txt
plans/: project_plan.md  qt_gui_plan.md
src/api/: app_context.hpp  seed_data.cpp  seed_data.hpp
src/domain/: document.hpp  enums.cpp  enums.hpp  favorite_record.hpp  org_unit.hpp  share_record.hpp  user.hpp
src/gui/: admin_panel.cpp  admin_panel.hpp  document_detail_dialog.cpp  document_detail_dialog.hpp  document_table_widget.cpp  document_table_widget.hpp  login_dialog.cpp  login_dialog.hpp  main_gui.cpp  main_window.cpp  main_window.hpp  org_tree_widget.cpp  org_tree_widget.hpp  pdf_renderer.cpp  pdf_renderer.hpp  pdf_text_extractor.cpp  pdf_text_extractor.hpp  search_panel.cpp  search_panel.hpp  share_dialog.cpp  share_dialog.hpp
src/repositories/interfaces/: i_document_repository.hpp  i_favorite_repository.hpp  i_org_unit_repository.hpp  i_share_repository.hpp  i_user_repository.hpp
src/repositories/sqlite/: sqlite_database.cpp  sqlite_database.hpp  sqlite_document_repository.cpp  sqlite_document_repository.hpp  sqlite_favorite_repository.cpp  sqlite_favorite_repository.hpp  sqlite_org_unit_repository.cpp  sqlite_org_unit_repository.hpp  sqlite_share_repository.cpp  sqlite_share_repository.hpp  sqlite_user_repository.cpp  sqlite_user_repository.hpp
src/services/: document_service.cpp  document_service.hpp  org_tree_service.cpp  org_tree_service.hpp  permission_service.cpp  permission_service.hpp  quota_service.cpp  quota_service.hpp  search_service.cpp  search_service.hpp  session_service.cpp  session_service.hpp  share_service.cpp  share_service.hpp  user_service.cpp  user_service.hpp
src/storage/: file_store.cpp  file_store.hpp
src/utils/: hash.cpp  hash.hpp  id_generator.cpp  id_generator.hpp  tokenizer.cpp  tokenizer.hpp
tests/: CMakeLists.txt  smoke_test.cpp
